Fix Clear button and card play button spacing

--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ padding-bottom: 1rem;
 }
 
 button.clear {
-  margin: 5px auto 8px auto;
+  margin: 5px auto 12px auto;
   padding: 7px;
   width: 150px;
   max-width: 250px;
